Fix bug with overlapping inventory styles

--- a/src/components/WarehouseInventoryList/WarehouseInventoryList.scss
+++ b/src/components/WarehouseInventoryList/WarehouseInventoryList.scss
@@ -2,7 +2,7 @@
 @use "../src/styles/partials/variables.scss" as *;
 @use "../src/styles/partials/typography.scss" as *;
 
-.inventory {
+.warehouse-inventory {
   &__container {
     background-color: $white;
     position: relative;
